# Wide-Deep-Learning-for-Recommendation-Systems

./: .gitignore  0341.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
scripts/: demo.py  train.py
src/: __init__.py
src/data/: __init__.py  utils.py
src/models/: __init__.py  baselines.py  wide_deep.py
src/utils/: __init__.py  metrics.py
tests/: test_models.py
